--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   }
   
   header {
-    background-color: rgb(38, 233, 48);
+    background-color: rgb(233, 181, 38);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     position: fixed;
     top: 0;
@@ -22,13 +22,13 @@
 
 
 html {
-	font-size: 16px;
+	font-size: 20px;
 	font-family: 'Lato', sans-serif;
 }
 
 body {
 	background-color: #e7e7e7;
-	color: #333;
+	color: #020202;
 	line-height: 1.5;
 }
 
@@ -56,6 +56,11 @@ ul {
 	padding: 0 1rem;
 }
 
+.box {
+	border: 1px solid black;
+	padding: 10px; /* optional */
+  }
+  
 /* Navigation */
 nav {
 	display: flex;
@@ -66,6 +71,7 @@ nav {
 
 .logo img {
 	height: 70px;
+	margin-left: -70px;
 	z-index: 1;
 }
 
